src/test/ui/parser/keyword-loop-as-identifier.stderr
error: expected identifier, found keyword `loop`
  --> $DIR/keyword-loop-as-identifier.rs:4:9
   |
LL |     let loop = "foo";
   |         ^^^^ expected identifier, found keyword
   |
help: escape `loop` to use it as an identifier
   |
LL |     let r#loop = "foo";
   |         ++

error: aborting due to previous error

